Added usage instructions in README.md